Updating an error cell.ipynb

--- a/FIFA21.ipynb
+++ b/FIFA21.ipynb
@@ -27,7 +27,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\loaim\\AppData\\Local\\Temp\\ipykernel_8492\\811059721.py:1: DtypeWarning: Columns (76) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "DtypeWarning: Columns (76) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('fifa21_raw_data.csv')\n"
      ]
     }
